build an image that accepts CLI flags on windows